--- a/infrastructure/network.yml
+++ b/infrastructure/network.yml
@@ -65,6 +65,10 @@ Resources:
             Tags: 
                 - Key: Name 
                   Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
+                - Key: KubernetesCluster
+                  Value: KubernetesCluster
+                - Key: kubernetes.io/role/elb
+                  Value: 1
 
     PublicSubnet2: 
         Type: AWS::EC2::Subnet
@@ -76,6 +80,10 @@ Resources:
             Tags: 
                 - Key: Name 
                   Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
+                - Key: KubernetesCluster
+                  Value: KubernetesCluster
+                - Key: kubernetes.io/role/elb
+                  Value: 1
 
     PrivateSubnet1: 
         Type: AWS::EC2::Subnet
